--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "msfukui",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^25.1.1",
     "@types/node": "^13.7.0",
+    "jest": "^25.1.0",
     "rimraf": "^3.0.1",
+    "ts-jest": "^25.1.0",
     "typescript": "^3.7.5"
   }
 }
