--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "rimraf": "^3.0.1",
     "ts-jest": "^25.1.0",
     "typescript": "^3.7.5"
+  },
+  "engines": {
+    "node": ">= 10",
+    "npm": ">= 6.11"
   }
 }
