--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "helloworld-for-typescript",
   "version": "0.0.1",
   "description": "`Hello world` for TypeScript",
+  "repository": "https://github.com/msfukui/helloworld-for-typescript.git",
   "files": [
     "dist"
   ],
@@ -9,7 +10,15 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "tsc",
-    "test": "jest"
+    "fix": "run-p fix:*",
+    "fix:eslint": "npm run lint:eslint -- --fix",
+    "fix:prettier": "npm run lint:prettier -- --write",
+    "lint": "run-p lint:*",
+    "lint:eslint": "eslint --ext js,ts .",
+    "lint:prettier": "prettier -l \"**/*.{json,md,yml}\"",
+    "lint:type": "tsc --noEmit",
+    "test": "run-s lint test:*",
+    "test:unit": "jest"
   },
   "keywords": [],
   "author": "msfukui",
@@ -17,7 +26,16 @@
   "devDependencies": {
     "@types/jest": "^25.1.1",
     "@types/node": "^13.7.0",
+    "@typescript-eslint/eslint-plugin": "2.19.0",
+    "@typescript-eslint/parser": "2.19.0",
+    "eslint": "6.8.0",
+    "eslint-config-prettier": "6.10.0",
+    "eslint-plugin-import": "2.20.1",
+    "eslint-plugin-prettier": "3.1.2",
+    "eslint-plugin-simple-import-sort": "5.0.1",
     "jest": "^25.1.0",
+    "npm-run-all": "4.1.5",
+    "prettier": "1.19.1",
     "rimraf": "^3.0.1",
     "ts-jest": "^25.1.0",
     "typescript": "^3.7.5"
