--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "eslint-plugin-import": "2.20.1",
     "eslint-plugin-prettier": "3.1.2",
     "eslint-plugin-simple-import-sort": "5.0.1",
+    "husky": "4.2.1",
     "jest": "^25.1.0",
+    "lint-staged": "10.0.7",
     "npm-run-all": "4.1.5",
     "prettier": "1.19.1",
     "rimraf": "^3.0.1",
