--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "dist"
   ],
   "main": "dist/lib/index.ts",
+  "bin": {
+    "helloworld-for-typescript": "dist/src/index.js"
+  },
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "tsc",
