--- a/package.json
+++ b/package.json
@@ -18,12 +18,11 @@
     "build": "run-p build:*",
     "build:common": "tsc",
     "build:esm": "tsc -p tsconfig.esm.json",
-    "fix": "run-p fix:*",
-    "fix:eslint": "npm run lint:eslint -- --fix",
-    "fix:prettier": "npm run lint:prettier -- --write",
+    "fix": "npm run format && npm run lint",
+    "format": "npm run lint:prettier -- --write",
     "lint": "run-p lint:*",
-    "lint:eslint": "eslint --ext js,ts .",
-    "lint:prettier": "prettier -l \"**/*.{json,md,yml}\"",
+    "lint:eslint": "eslint --ext ts,js .",
+    "lint:prettier": "prettier -l \"**/*.{json,md,yml,ts,js}\"",
     "lint:type": "tsc --noEmit",
     "test": "run-s lint test:*",
     "test:unit": "jest"
@@ -32,23 +31,22 @@
   "author": "msfukui",
   "license": "MIT",
   "devDependencies": {
-    "@types/jest": "^25.1.1",
-    "@types/node": "^13.7.0",
-    "@typescript-eslint/eslint-plugin": "2.19.0",
-    "@typescript-eslint/parser": "2.19.0",
-    "eslint": "6.8.0",
-    "eslint-config-prettier": "6.10.0",
-    "eslint-plugin-import": "2.20.1",
-    "eslint-plugin-prettier": "3.1.2",
-    "eslint-plugin-simple-import-sort": "5.0.1",
-    "husky": "4.2.1",
-    "jest": "^25.1.0",
-    "lint-staged": "10.0.7",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^15.6.1",
+    "@typescript-eslint/eslint-plugin": "4.25.0",
+    "@typescript-eslint/parser": "4.25.0",
+    "eslint": "7.27.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-import": "2.23.3",
+    "eslint-plugin-simple-import-sort": "7.0.0",
+    "husky": "6.0.0",
+    "jest": "^27.0.1",
+    "lint-staged": "11.0.0",
     "npm-run-all": "4.1.5",
-    "prettier": "1.19.1",
-    "rimraf": "^3.0.1",
-    "ts-jest": "^25.1.0",
-    "typescript": "^3.7.5"
+    "prettier": "2.3.0",
+    "rimraf": "^3.0.2",
+    "ts-jest": "^27.0.1",
+    "typescript": "^4.3.2"
   },
   "engines": {
     "node": ">= 10",
