--- a/package.json
+++ b/package.json
@@ -33,8 +33,12 @@
   "devDependencies": {
     "@types/jest": "^26.0.23",
     "@types/node": "^15.6.1",
+    "@types/power-assert": "1.5.3",
     "@typescript-eslint/eslint-plugin": "4.25.0",
     "@typescript-eslint/parser": "4.25.0",
+    "babel-core": "6.26.3",
+    "babel-jest": "27.0.1",
+    "babel-preset-power-assert": "3.0.0",
     "eslint": "7.27.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-import": "2.23.3",
@@ -43,13 +47,14 @@
     "jest": "^27.0.1",
     "lint-staged": "11.0.0",
     "npm-run-all": "4.1.5",
+    "power-assert": "1.6.1",
     "prettier": "2.3.0",
     "rimraf": "^3.0.2",
     "ts-jest": "^27.0.1",
     "typescript": "^4.3.2"
   },
   "engines": {
-    "node": ">= 10",
+    "node": ">= 12",
     "npm": ">= 6.11"
   }
 }
