--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
     "build:common": "tsc",
     "build:esm": "tsc -p tsconfig.esm.json",
     "fix": "npm run format && npm run lint",
-    "format": "npm run lint:prettier -- --write",
+    "format": "run-s format:*",
+    "format:eslint": "npm run lint:eslint -- --fix",
+    "format:prettier": "npm run lint:prettier -- --write",
     "lint": "run-p lint:*",
     "lint:eslint": "eslint --ext ts,js .",
     "lint:prettier": "prettier -l \"**/*.{json,md,yml,ts,js}\"",
     "lint:type": "tsc --noEmit",
     "test": "run-s lint test:*",
-    "test:unit": "jest"
+    "test:unit": "jest",
+    "prepare": "husky install",
+    "lint-staged": "lint-staged"
   },
   "keywords": [],
   "author": "msfukui",
@@ -43,7 +47,7 @@
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-import": "2.23.3",
     "eslint-plugin-simple-import-sort": "7.0.0",
-    "husky": "6.0.0",
+    "husky": "^6.0.0",
     "jest": "^27.0.1",
     "lint-staged": "11.0.0",
     "npm-run-all": "4.1.5",
